--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,20 @@
-public/
+
+
+
+github
+
+<li><a href="https://github.com/trixtxnz/game-dev">https://github.com/trixtxnz/game-dev</a></li>
+
+
+<li><a href="t1a02-video-flac-tristen.html">t1a02-video-flac-tristen.html</a></li>
+
+
+
+<li><a href="..">...</a></li>
+<li><a href="..">...</a></li>
+<li><a href="..">...</a></li>
+<li><a href="..">...</a></li>
+<li><a href="..">...</a></li>
+<li><a href="..">...</a></li>
+<li><a href="..">...</a></li>
+<li><a href="..">...</a></li>
