--- a/public/t1a02-video-flac-tristen.html
+++ b/public/t1a02-video-flac-tristen.html
@@ -1,1 +1,23 @@
-sfghdfgh
+<script>
+function
+  let myIn01 = parseFloat(){
+  let myAnswer = myIn01 * myIn01
+  document.getElementById('myspace').innerHTML = ' ' + myIn01 + ' squared = ' +myAnswer
+}
+</script>
+
+
+<h2 align=cennter>t1a02-video-flac-fred.html</h2>h2>
+Input: <input id="myNumber" type=number value="4" ><br>
+
+Event:<input type=button value="myElement squares" onclick="{
+        mySquareFunction()
+        }"><br>
+
+Output:<span id="mySpan01">...</span>
+
+
+
+
+
+        
