--- a/public/t1a02-video-flac-tristen.html
+++ b/public/t1a02-video-flac-tristen.html
@@ -18,6 +18,47 @@ Output:<span id="mySpan01">...</span>
 
 
 
+<!DOCTYPE html>
+<html>
+<head>
+    <title>My Page</title>
+</head>
+<body>
+    <h1>Welcome to My Website</h1>
+</body>
+</html>
+<form action="/submit-form" method="post">
+  <label for="username">Username:</label>
+  <input type="text" id="username" name="username" placeholder="Enter your username" required>
+<p>
+  <label for="password">Password:</label>
+  <input type="password" id="password" name="password" placeholder="Enter your password" required>
+<p> 
+<p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+  
+  <input type="radio" name="gender" value="male"> Male
+<input type="radio" name="gender" value="female"> Female
+
+
+
+<p>&nbsp
+<p>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 
+ 
+
+  <input type="submit" value="Login" style="width: 150x; height: 50x;">
+
+    </form>
+
+
+
+
+
+
+
+
+
+
+
 
 
 
