--- a/public/t1a02-video-flac-tristen.html
+++ b/public/t1a02-video-flac-tristen.html
@@ -16,6 +16,18 @@ Event:<input type=button value="myElement squares" onclick="{
 
 Output:<span id="mySpan01">...</span>
 
+<!DOCTYPE html>
+<html>
+<head>
+    <title>My Page</title>
+</head>
+<body>
+    <h1>Welcome to My Website</h1>
+</body>
+</html>
+
+
+
 
 
 
