--- a/public/t1a02-video-flac-tristen.html
+++ b/public/t1a02-video-flac-tristen.html
@@ -1,3 +1,4 @@
+
 <script>
 function
   let myIn01 = parseFloat(){
@@ -16,15 +17,16 @@ Event:<input type=button value="myElement squares" onclick="{
 
 Output:<span id="mySpan01">...</span>
 
-<!DOCTYPE html>
-<html>
-<head>
-    <title>My Page</title>
-</head>
-<body>
-    <h1>Welcome to My Website</h1>
-</body>
-</html>
+
+
+<form action="/submit-form" method="post">
+  <label for="username">Username:</label>
+  <input type="text" id="username" name="username" placeholder="Enter your username" required>
+<p>
+  <label for="password">Password:</label>
+  <input type="password" id="password" name="password" placeholder="Enter your password" required>
+
+
 
 
 
