--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@ github
 
 
 
-<li><a href="..">...</a></li>
+<li><a href="..">https://github.com/trixtxnz/game-dev/blob/main/public/new%20test</a></li>
 <li><a href="..">...</a></li>
 <li><a href="..">...</a></li>
 <li><a href="..">...</a></li>
