--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@ github
 
 
 
-<li><a href="..">"new test.html">new test.html</a></li>
+<li><a href="..">"new test">new test</a></li>
 <li><a href="..">...</a></li>
 <li><a href="..">...</a></li>
 <li><a href="..">...</a></li>
