--- a/public/new-test.html
+++ b/public/new-test.html
@@ -42,6 +42,6 @@ max-width: 448px;box-sizing: border-box;}.form-group {margin-bottom:16px;}.form-
  
 
   <input type="submit" value="Login" style="width: 150x; height: 50x;">
-
-    </form>
+<form action="https://trixtxnz.github.io/game-dev/public/t1a02-video-flac-tristen.html" method="post">
+</form>
 
