--- a/public/new-test.html
+++ b/public/new-test.html
@@ -42,6 +42,16 @@ max-width: 448px;box-sizing: border-box;}.form-group {margin-bottom:16px;}.form-
  
 
   <input type="submit" value="Login" style="width: 150x; height: 50x;">
-<form action="destination-https://trixtxnz.github.io/game-dev/public/t1a02-video-flac-tristen.html" method="post">
+ <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="refresh" content="3; url=https://example.com/new-page.html">
+  <title>Redirecting...</title>
+</head>
+<body>
+  <p>If you are not redirected automatically, <a href="https://trixtxnz.github.io/game-dev/public/t1a02-video-flac-tristen.html">click here</a>.</p>
+</body>
+</html>
+ 
+ <form action="destination-https://trixtxnz.github.io/game-dev/public/t1a02-video-flac-tristen.html" method="post">
 </form>
 
