--- a/public/new-test.html
+++ b/public/new-test.html
@@ -40,18 +40,8 @@ max-width: 448px;box-sizing: border-box;}.form-group {margin-bottom:16px;}.form-
 <p>&nbsp
 <p>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 
  
-
-  <input type="submit" value="Login" style="width: 150x; height: 50x;">
- <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="refresh" content="3; url=https://example.com/new-page.html">
-  <title>Redirecting...</title>
-</head>
-<body>
-  <p>If you are not redirected automatically, <a href="https://trixtxnz.github.io/game-dev/public/t1a02-video-flac-tristen.html">click here</a>.</p>
-</body>
-</html>
- 
+<form action="https://github.com/your-repo" method="get">
+  <input type="submit" value="Login" style="width: 150x; height: 50x;"> 
  <form action="destination-https://trixtxnz.github.io/game-dev/public/t1a02-video-flac-tristen.html" method="post">
 </form>
 
