--- a/public/new-test.html
+++ b/public/new-test.html
@@ -40,6 +40,6 @@ max-width: 448px;box-sizing: border-box;}.form-group {margin-bottom:16px;}.form-
 <p>&nbsp
 <p>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 
  
-  <input type="submit" value="Login" style="width: 150x; height: 50x;" form action="https://trixtxnz.github.io/game-dev/public/t1a02-video-flac-tristen.html" method="get">>
+  <input type="submit" value="Login" style="width: 150x; height: 50x;" form action="https://trixtxnz.github.io/game-dev/public/t1a02-video-flac-tristen.html" method="get">
 </form>
 
