--- a/public/new-test.html
+++ b/public/new-test.html
@@ -40,9 +40,11 @@ max-width: 448px;box-sizing: border-box;}.form-group {margin-bottom:16px;}.form-
 <p>&nbsp
 <p>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 
  
- <form action="https://trixtxnz.github.io/game-dev/public/t1a02-video-flac-tristen.html" method="get">
   <input type="submit" value="Login" style="width: 150x; height: 50x;">
-
+<form action="https://github.com/your-repo" method="get">
+  <input type="text" name="example" placeholder="Enter something">
+  <button type="submit">Submit</button>
+</form>
 
 </form>
 
