--- a/public/new-test.html
+++ b/public/new-test.html
@@ -41,7 +41,7 @@ max-width: 448px;box-sizing: border-box;}.form-group {margin-bottom:16px;}.form-
 <p>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 
  
   <input type="submit" value="Login" style="width: 150x; height: 50x;">
-<form action="https://github.com/your-repo" method="POST">
+<form target= "_blank" action="https://github.com/your-repo" method="get">
   <input type="text" name="example" placeholder="Enter something">
   <button type="submit">Submit</button>
 </form>
