--- a/public/new-test.html
+++ b/public/new-test.html
@@ -39,7 +39,8 @@ max-width: 448px;box-sizing: border-box;}.form-group {margin-bottom:16px;}.form-
 
 <p>&nbsp
 <p>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 
- <input type="submit" value="Login" style="width: 150x; height: 50x; onclick="window.location.href='https://github.com/your-repository'; return false;">
  
-</form>
 
+  <input type="submit" value="Login" style="width: 150x; height: 50x;">
+
+    </form>
