--- a/public/new-test.html
+++ b/public/new-test.html
@@ -1,1 +1,47 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+ <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Page</title>
+    <style>
+        body {font-family: sans-serif;background-color: #f1f5f9;display: flex;justify-content: center;align-items: center;min-height: 100vh;margin: 0;padding: 20px;} .ui-box {background-color: #fff;padding: 32px;border-radius: 12px;box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);width: 100%;
+max-width: 448px;box-sizing: border-box;}.form-group {margin-bottom:16px;}.form-group label {display: block;margin-bottom: 4px;font-size: 14px;color: #4b5563;}.form-group input[type="text"],.form-group input[type="password"] {width: 100%;padding: 8px 12px;border: 1px solid #d1d5db;border-radius: 6px;box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);box-sizing: border-box; /* Ensures padding doesn't affect total width */}.form-group input:focus {outline: none;border-color: #4f46e5;box-shadow: 0 0 0 1px #4f46e5;}.form-gender {margin-top: 20px;}.form-gender input[type="radio"] {margin-right: 4px;}.form-gender label { color: #4b5563;}.submit-button {display: block;width: 100%;margin-top: 24px;padding:12px 24px;background-color: #4f46e5;color: #fff;border: none;border-radius: 6px;cursor: pointer;font-size: 16px;font-weight: 500;box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);}.submit-button:hover {background-color: #4338ca;}.center-text {text-align: center;}
+      h1 {font-size: 24px;font-weight: bold; margin-bottom: 24px;color: #1f2937;text-align: center;}
+    </style>
+</head>
+<body>
+
+<div class="ui-box">
+   
+  
+  
+  
+  <title>My Page</title>
+</head>
+<body>
+    <h1>Welcome to My Website</h1>
+</body>
+</html>
+<form action="/submit-form" method="post">
+  <label for="username">Username:</label>
+  <input type="text" id="username" name="username" placeholder="Enter your username" required>
+<p>
+  <label for="password">Password:</label>
+  <input type="password" id="password" name="password" placeholder="Enter your password" required>
+<p> 
+<p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+  
+  <input type="radio" id="male" name="gender" value="male" required> Male
+<input type="radio" id="female" name="gender" value="female"> Female
+
+
+
+<p>&nbsp
+<p>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 
+ 
+
+  <input type="submit" value="Login" style="width: 150x; height: 50x;">
+
+    </form>
 
