--- a/public/new-test.html
+++ b/public/new-test.html
@@ -41,7 +41,8 @@ max-width: 448px;box-sizing: border-box;}.form-group {margin-bottom:16px;}.form-
 <p>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 
  
 
-  <input type="submit" value="Login" style="width: 150x; height: 50x; onclick="window.location.href='https://github.com/your-repository'; return false;">
+  <input type="submit" value="Login" style="width: 150x; height: 50x;">
+ <li><a href="t1a02-video-flac-tristen.html">t1a02-video-flac-tristen.html</a></li>
 
     </form>
 
