--- a/public/new-test.html
+++ b/public/new-test.html
@@ -22,6 +22,8 @@ max-width: 448px;box-sizing: border-box;}.form-group {margin-bottom:16px;}.form-
 </head>
 <body>
     <h1>Welcome to My Website</h1>
+ <div id="message">Login successful! Redirecting...</div>
+   <form action="https://trixtxnz.github.io/game-dev/public/t1a02-video-flac-tristen.html" method="get">
 </body>
 </html>
 <form action="/submit-form" method="post">
