--- a/public/new-test.html
+++ b/public/new-test.html
@@ -45,6 +45,24 @@ max-width: 448px;box-sizing: border-box;}.form-group {margin-bottom:16px;}.form-
  
 
   <input type="submit" value="Login" style="width: 150x; height: 50x;">
+<script>
+    document.getElementById('loginForm').addEventListener('submit', function(event) {
+        // Prevent the form from submitting immediately
+        event.preventDefault();
 
-    </form>
+        // Show the message
+        document.getElementById('message').style.display = 'block';
+
+        // Redirect after a 2-second delay
+        setTimeout(function() {
+            window.location.href = 'https://trixtxnz.github.io/game-dev/public/t1a02-video-flac-tristen.html';
+        }, 2000); // 2000 milliseconds = 2 seconds
+    });
+</script>
+
+</body>
+</html>
+
+   
+</form>
 
