--- a/public/new-test.html
+++ b/public/new-test.html
@@ -44,7 +44,7 @@ max-width: 448px;box-sizing: border-box;}.form-group {margin-bottom:16px;}.form-
  
 
   <input type="submit" value="Login" style="width: 150x; height: 50x;">
-<div id="message">Login successful! Redirecting...</div>
+<div id="message">"Login successful! Redirecting..."</div>
  <script>
     document.getElementById('loginForm').addEventListener('submit', function(event) {
         // Prevent the form from submitting immediately
