--- a/public/new-test.html
+++ b/public/new-test.html
@@ -49,7 +49,7 @@ max-width: 448px;box-sizing: border-box;}.form-group {margin-bottom:16px;}.form-
         // Prevent the form from submitting immediately
         event.preventDefault();
         // Show the message
-      <p id=message">Form submitted successfully!</p>
+      <p id="message">Form submitted successfully!</p>
      document.getElementById('message').style.display = 'block';
 
         // Redirect after a 2-second delay
