--- a/public/new-test.html
+++ b/public/new-test.html
@@ -44,18 +44,11 @@ max-width: 448px;box-sizing: border-box;}.form-group {margin-bottom:16px;}.form-
  
 
   <input type="submit" value="Login" style="width: 150x; height: 50x;">
- <script>
-    document.getElementById('loginForm').addEventListener('submit', function(event) {
-        // Prevent the form from submitting immediately
-        event.preventDefault();
-        // Show the message
-      <p id="message">Form submitted successfully!</p>
-     document.getElementById('message').style.display = 'block';
-
-        // Redirect after a 2-second delay
-        setTimeout(function() {
+<script>
+ document.getElementById('message').style.displat = 'block';
+ setTimeout(function() {
             window.location.href = 'https://trixtxnz.github.io/game-dev/public/t1a02-video-flac-tristen.html';
-        }, 4000); // 2000 milliseconds = 2 seconds
+        }, 8000); // 2000 milliseconds = 2 seconds
     });
 </script>
 
