--- a/public/new-test.html
+++ b/public/new-test.html
@@ -42,7 +42,7 @@ max-width: 448px;box-sizing: border-box;}.form-group {margin-bottom:16px;}.form-
 <p>&nbsp
 <p>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 
  
-
+ <div id="message">Login successful! Redirecting...</div>
   <input type="submit" value="Login" style="width: 150x; height: 50x;">
 <script>
  document.getElementById('message').style.displat = 'block';
