--- a/public/new-test.html
+++ b/public/new-test.html
@@ -42,9 +42,8 @@ max-width: 448px;box-sizing: border-box;}.form-group {margin-bottom:16px;}.form-
 <p>&nbsp
 <p>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 
  
- <div id="message">Login successful! Redirecting...</div>
+ <p id="message">Login successful! Redirecting...</p>
   <input type="submit" value="Login" style="width: 150x; height: 50x;">
-<div id="message">Login successful! Redirecting...</div>
  <script>
 
  document.getElementById('message').style.displat = 'block';
