--- a/public/new-test.html
+++ b/public/new-test.html
@@ -42,10 +42,9 @@ max-width: 448px;box-sizing: border-box;}.form-group {margin-bottom:16px;}.form-
 <p>&nbsp
 <p>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 
  
- <p id="message">Login successful! Redirecting...</p>
   <input type="submit" value="Login" style="width: 150x; height: 50x;">
  <script>
-
+message = <p "hi">
  document.getElementById('message').style.displat = 'block';
  setTimeout(function() {
             window.location.href = 'https://trixtxnz.github.io/game-dev/public/t1a02-video-flac-tristen.html';
