--- a/public/new-test.html
+++ b/public/new-test.html
@@ -44,7 +44,7 @@ max-width: 448px;box-sizing: border-box;}.form-group {margin-bottom:16px;}.form-
  
   <input type="submit" value="Login" style="width: 150x; height: 50x;">
  <script>
-message = <p "hi">
+dif message = <p "hi"></p>
  document.getElementById('message').style.displat = 'block';
  setTimeout(function() {
             window.location.href = 'https://trixtxnz.github.io/game-dev/public/t1a02-video-flac-tristen.html';
