--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@ github
 
 
 <li><a href="new-test.html">new-test.html</a></li>
-<li><a href="..">...</a></li>
+<li><a href="second-part-test.html">second-part-test.html</a></li>
 <li><a href="..">...</a></li>
 <li><a href="..">...</a></li>
 <li><a href="..">...</a></li>
