--- a/public/new-test.html
+++ b/public/new-test.html
@@ -38,7 +38,7 @@ max-width: 448px;box-sizing: border-box;}.form-group {margin-bottom:16px;}.form-
 <input type="radio" id="female" name="gender" value="female"> Female
 
 
-<div id="message">goodbye</div>div>
+<div id="message">goodbye</div>
 <p>&nbsp
 <p>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 
  
