--- a/public/new-test.html
+++ b/public/new-test.html
@@ -21,7 +21,6 @@ max-width: 448px;box-sizing: border-box;}.form-group {margin-bottom:16px;}.form-
   <title>My Page</title>
 </head>
 <body>
- <div id="message">"goodbye"</div>   
  <h1>Welcome to My Website</h1>
    <form action="https://trixtxnz.github.io/game-dev/public/t1a02-video-flac-tristen.html" method="get">
 </body>
@@ -43,8 +42,8 @@ max-width: 448px;box-sizing: border-box;}.form-group {margin-bottom:16px;}.form-
 <p>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 
  
   <input type="submit" value="Login" style="width: 150x; height: 50x;">
+ <'message' = id = "message">
  <script>
-
  document.getElementById('message').style.displat = 'block';
  setTimeout(function() {
             window.location.href = 'https://trixtxnz.github.io/game-dev/public/t1a02-video-flac-tristen.html';
