--- a/public/new-test.html
+++ b/public/new-test.html
@@ -15,10 +15,11 @@ max-width: 460px;box-sizing: border-box;}.form-group {margin-bottom:16px;}.form-
 
 <div class="ui-box">
    
-  
-  
-  
-  <title>My Page</title>
+  <syle>
+   .circle-button {
+      width: 100px; /* Adjust size * height: 100px; /* Adjust size */ background-color: red; /* Red color */ border: none; /* Remove border */ border-radius: 50%; /* Make it circular */ color: white; /* Text color */ font-size: 16px; /* Text size */cursor: pointer; /* Pointer on hover */display: flex; justify-content: center;align-items: center;} .circle-button:hover { background-color: darkred; /* Darker red on hover */}
+   </syle>
+   <title>My Page</title>
 </head>
 <body>
  <h1>Welcome to My Website</h1>
@@ -41,7 +42,7 @@ max-width: 460px;box-sizing: border-box;}.form-group {margin-bottom:16px;}.form-
 <p>&nbsp
 <p>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 
  
-  <input type="submit" value="Login" style="width: 150x; height: 50x;"> <button></button>
+  <input type="submit" value="Login" style="width: 150x; height: 50x;"> 
 
 </form>
 
