--- a/public/new-test.html
+++ b/public/new-test.html
@@ -14,15 +14,19 @@ max-width: 460px;box-sizing: border-box;}.form-group {margin-bottom:16px;}.form-
 <body>
 
 <div class="ui-box">
-   
-  <syle>
+  <style>
    .circle-button {
       width: 100px; /* Adjust size * height: 100px; /* Adjust size */ background-color: red; /* Red color */ border: none; /* Remove border */ border-radius: 50%; /* Make it circular */ color: white; /* Text color */ font-size: 16px; /* Text size */cursor: pointer; /* Pointer on hover */display: flex; justify-content: center;align-items: center;} .circle-button:hover { background-color: darkred; /* Darker red on hover */}
    </syle>
+ </head>
    <title>My Page</title>
 </head>
 <body>
- <h1>Welcome to My Website</h1>
+  <button class="circle-button">Click Me</button>
+</body>
+</html>
+ <body>
+   <h1>Welcome to My Website</h1>
    <form action="https://trixtxnz.github.io/game-dev/public/t1a02-video-flac-tristen.html" method="get">
 </body>
 </html>
