--- a/public/new-test.html
+++ b/public/new-test.html
@@ -4,6 +4,7 @@
  <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Page</title>
+      <title></title>
   <form action="https://trixtxnz.github.io/game-dev/public/t1a02-video-flac-tristen.html" method="get">  
  <style>
         body {font-family: sans-serif;background-color: #f1f5f9;display: flex;justify-content: center;align-items: center;min-height: 100vh;margin: 0;padding: 20px;} .ui-box {background-color: #fff;padding: 32px;border-radius: 12px;box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);width: 100%;
@@ -12,7 +13,7 @@ max-width: 460px;box-sizing: border-box;}.form-group {margin-bottom:16px;}.form-
     </style>
 </head>
 <body>
-
+ 
 <div class="ui-box">
    
   <title>My Page</title>
@@ -22,8 +23,7 @@ max-width: 460px;box-sizing: border-box;}.form-group {margin-bottom:16px;}.form-
    <form action="https://trixtxnz.github.io/game-dev/public/t1a02-video-flac-tristen.html" method="get">
 </body>
  <syle>
-   .circle-button {
-      width: 100px; /* Adjust size * height: 100px; /* Adjust size */ background-color: red; /* Red color */ border: none; /* Remove border */ border-radius: 50%; /* Make it circular */ color: white; /* Text color */ font-size: 16px; /* Text size */cursor: pointer; /* Pointer on hover */display: flex; justify-content: center;align-items: center;} .circle-button:hover { background-color: darkred; /* Darker red on hover */}
+   .circle-button {width: 100px; /* Adjust size * height: 100px; /* Adjust size */ background-color: red; /* Red color */ border: none; /* Remove border */ border-radius: 50%; /* Make it circular */ color: white; /* Text color */ font-size: 16px; /* Text size */cursor: pointer; /* Pointer on hover */display: flex; justify-content: center;align-items: center;} .circle-button:hover { background-color: darkred; /* Darker red on hover */}
    </syle>
 <body>
   <button class="circle-button">Click Me</button>
