--- a/public/new-test.html
+++ b/public/new-test.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Red Circle Button</title>
-  <form action="https://trixtxnz.github.io/game-dev/public/t1a02-video-flac-tristen.html" method="get">  
- <style>
-   .circle-button {
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Red Circle Button</title>
+  <form action="https://trixtxnz.github.io/game-dev/public/t1a02-video-flac-tristen.html" method="get">   
+  <style>
+    .circle-button {
       width: 50px; /* Adjust size */
       height: 50px; /* Adjust size */
       background-color: red; /* Red color */
@@ -131,31 +131,30 @@
 </head>
 <body>
 
- 
 <div class="ui-box">
-
- <title>My Page</title>
+  
+  <title>My Page</title>
 </head>
 <body>
- <h1>Welcome to My Website</h1>
-   <form action="https://trixtxnz.github.io/game-dev/public/t1a02-video-flac-tristen.html" method="get">
+    <h1>Welcome to My Website</h1>
+    <form action="https://trixtxnz.github.io/game-dev/public/t1a02-video-flac-tristen.html" method="get">
 </body>
-
+    
 </html>
- <form action="/submit-form" method="post">
-  <label for="username">Username:</label>
-  <input type="text" id="username" name="username" placeholder="Enter your username" required>
-<p>
-  <label for="password">Password:</label>
-  <input type="password" id="password" name="password" placeholder="Enter your password" required>
-<p> 
-<p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-  
-  <input type="radio" id="male" name="gender" value="male" required> Male
-<input type="radio" id="female" name="gender" value="female"> Female
 
-
-  <p>&nbsp;
+ 
+  <button class="circle-button">Click Me</button>
+  <form action="/submit-form" method="post">
+    <label for="username">Username:</label>
+    <input type="text" id="username" name="username" placeholder="Enter your username" required>
+    <p>
+      <label for="password">Password:</label>
+      <input type="password" id="password" name="password" placeholder="Enter your password" required>
+    <p> 
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <input type="radio" id="male" name="gender" value="male" required> Male
+    <input type="radio" id="female" name="gender" value="female"> Female
+    <p>&nbsp;
     <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
     <input type="submit" value="Login" style="width: 150x; height: 50x;">
   </form>
@@ -176,6 +175,12 @@
     // Update the text on the page with the new value
     counterElement.textContent = counterValue;
   });
+
+
+
+</script>
+</body>
+</html>
 
 
 
