--- a/public/new-test.html
+++ b/public/new-test.html
@@ -156,7 +156,7 @@
     <input type="radio" id="female" name="gender" value="female"> Female
     <p>&nbsp;
     <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
-    <input type="submit" value="Login" style="width: 150x; height: 50x;">
+    <input type="submit" value="sign up" style="width: 150x; height: 50x;">
   </form>
 </div>
 <script>
