--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@ github
 
 <li><a href="new-test.html">new-test.html</a></li>
 <li><a href="second-part-test.html">second-part-test.html</a></li>
-<li><a href="https://63d93564-d40c-4d4a-8686-1bbb4d7c309d-00-2869f8oeskshe.riker.replit.dev:3001/">replit-project</a></li>
+<li><a href="replit.html">replit.html</a></li>
 <li><a href="..">...</a></li>
 <li><a href="..">...</a></li>
 <li><a href="..">...</a></li>
