--- a/public/replit.html
+++ b/public/replit.html
@@ -1,1 +1,1 @@
-https://63d93564-d40c-4d4a-8686-1bbb4d7c309d-00-2869f8oeskshe.riker.replit.dev:3001/
+website https://63d93564-d40c-4d4a-8686-1bbb4d7c309d-00-2869f8oeskshe.riker.replit.dev:3001/
