--- a/public/t1a06-css-fred.html
+++ b/public/t1a06-css-fred.html
@@ -1,7 +1,39 @@
-<h1 align=center>t1a05-css-fred.html</h1>
-<a href="https:www.w3schools.com/Css/css_border.asp">w3school css</a><br><br>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>t1a06-css-fred</title>
+<style>
+  body {
+    font-family:sans-serif;
+    backround-color: #f1f5f9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    margin: 0;
+    padding: 20px;
+      }
+  .ui-box {
+      background-color: #fff;
+      padding: 32px;
+      border-radius: 12px;
+      box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+      width: 100%;
+      max-width: 448px;
+      box-sizing: border-box;
+      text-align: center;
+  }
+</style>
+   
+  <h1 align=center>t1a05-css-fred.html</h1>
+<dif style="text-align: center; margin-bottom:
+  16px;">
+  <a href="https:www.w3schools.com/Css/css_border.asp">w3school css</a><br><br>
 
 this is <b>bold</b> True?<br>
 this is <b style="color:red; backround-color:yellow;">cool</b> Yes!<br>
 <br>
 this is <i style="border-style:groove;">italic with border</i>
+  
