--- a/public/t1a06-css-fred.html
+++ b/public/t1a06-css-fred.html
@@ -16,7 +16,7 @@
     padding: 20px;
       }
   .ui-box {
-      background-color: #fff;
+      background-color: #0000FF;
       padding: 32px;
       border-radius: 12px;
       box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
