--- a/public/t1a06-css-fred.html
+++ b/public/t1a06-css-fred.html
@@ -26,7 +26,7 @@
       text-align: center;
   }
 </style>
-   
+   <div class="ui-box>
   <h1 align=center>t1a05-css-fred.html</h1>
 <dif style="text-align: center; margin-bottom:
   16px;">
