--- a/public/t1a06-css-fred.html
+++ b/public/t1a06-css-fred.html
@@ -7,7 +7,7 @@
 <style>
   body {
     font-family:sans-serif;
-    backround-color: #f1f5f9;
+    background-color: #f1f5f9;
     display: flex;
     justify-content: center;
     align-items: center;
