--- a/public/t1a06-css-fred.html
+++ b/public/t1a06-css-fred.html
@@ -3,18 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>t1a06-css-fred</title>
+    <title>fred</title>
 <style>
   body {
     font-family:sans-serif;
-    background-color: #f1f5f9;
+    background-color: #FF6961;
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
     margin: 0;
     padding: 20px;
-      }
+  
+  }
   .ui-box {
       background-color: #0000FF;
       padding: 32px;
@@ -25,15 +26,55 @@
       box-sizing: border-box;
       text-align: center;
   }
+  .ui-box2 {
+      background-color: #008000;
+      padding: 32px;
+      border-radius: 12px;
+      box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+      width: 100%;
+      max-width: 448px;
+      box-sizing: border-box;
+      text-align: center;
+  }
+  .ui-box3 {
+      background-color: #FFF;
+      padding: 32px;
+      border-radius: 12px;
+      box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+      width: 100%;
+      max-width: 448px;
+      box-sizing: border-box;
+      text-align: center;
+  }
+  .ui-box4 {
+      background-color: yellow;
+      padding: 32px;
+      border-radius: 12px;
+      box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+      width: 100%;
+      max-width: 448px;
+      box-sizing: border-box;
+      text-align: center;
+  }
 </style>
-   <div class="ui-box>
-  <h1 align=center>t1a05-css-fred.html</h1>
+   <div class="ui-box">
+  <h1 align=center><b style="color:red;text-shadow: -1px -1px 0 green, 1px -1px 0 purple, -1px 1px 0 white, 1px 1px 0 green; color:">title>t1a06-css-fred</b></h1>
 <dif style="text-align: center; margin-bottom:
   16px;">
   <a href="https:www.w3schools.com/Css/css_border.asp">w3school css</a><br><br>
-
+<div class="ui-box3">
 this is <b>bold</b> True?<br>
-this is <b style="color:red; backround-color:yellow;">cool</b> Yes!<br>
+this is <b style="color:red; background-color:yellow; text-shadow:">cool</b> Yes!<br>
 <br>
+
 this is <i style="border-style:groove;">italic with border</i>
+<br>
+  </div>  
+<div class="ui-box2">
+    hi i made this useing my website for refrance sorry that its <b style="color:red; background-color:yellow; text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 black; color:;">mostly</b> not inline css
+<br>
+	</div>
+<div class="ui-box4">
+  <b style="color:red; background-color:purple;text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 black; color:;">thank you for looking at it</b><br>
+byeeee
   
