--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@ github
 <li><a href="second-part-test.html">second-part-test.html</a></li>
 <li><a href="https://63d93564-d40c-4d4a-8686-1bbb4d7c309d-00-2869f8oeskshe.riker.replit.dev:3001/">replit.html</a></li>
 <li><a href="t1a06-css-fred.html">t1a06-css-fred.html</a></li>
-<li><a href="..">...</a></li>
+<li><a href="t1a01-proper-webpage-fred.html">t1a01-proper-webpage-fred.html</a></li>
 <li><a href="..">...</a></li>
 <li><a href="..">...</a></li>
 <li><a href="..">...</a></li>
