--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,6 @@ github
 <li><a href="https://63d93564-d40c-4d4a-8686-1bbb4d7c309d-00-2869f8oeskshe.riker.replit.dev:3001/">replit.html</a></li>
 <li><a href="t1a06-css-fred.html">t1a06-css-fred.html</a></li>
 <li><a href="https://c0db55fb-0566-4389-ac08-4d5e42835089-00-681hl0pt5lb7.picard.replit.dev/">t1a01-proper-webpage-fred.html</a></li>
-<li><a href="..">...</a></li>
+<li><a href="t3a05-input-output-by-tristen.html">t3a05-input-output-by-tristen.html</a></li>
 <li><a href="..">...</a></li>
 <li><a href="..">...</a></li>
