--- a/public/index.html
+++ b/public/index.html
@@ -16,5 +16,5 @@ github
 <li><a href="t1a06-css-fred.html">t1a06-css-fred.html</a></li>
 <li><a href="https://c0db55fb-0566-4389-ac08-4d5e42835089-00-681hl0pt5lb7.picard.replit.dev/">t1a01-proper-webpage-fred.html</a></li>
 <li><a href="t3a05-input-output-by-tristen.html">t3a05-input-output-by-tristen.html</a></li>
-<li><a href="..">...</a></li>
+<li><a href="t1a03-list-table-and-events-tristen.html">t1a03-list-table-and-events-tristen.html</a></li>
 <li><a href="..">...</a></li>
