--- a/public/index.html
+++ b/public/index.html
@@ -18,3 +18,28 @@ github
 <li><a href="t3a05-input-output-by-tristen.html">t3a05-input-output-by-tristen.html</a></li>
 <li><a href="t1a03-list-table-and-events-tristen.html">t1a03-list-table-and-events-tristen.html</a></li>
 <li><a href="..">...</a></li>
+<li><a href="..">...</a></li>
+<li><a href="..">...</a></li>
+<li><a href="..">...</a></li>
+<li><a href="..">...</a></li>
+<li><a href="..">...</a></li>
+<li><a href="..">...</a></li>
+<li><a href="..">...</a></li>
+<li><a href="..">...</a></li>
+<li><a href="..">...</a></li>
+<li><a href="..">...</a></li>
+<li><a href="..">...</a></li>
+<li><a href="..">...</a></li>
+<li><a href="..">...</a></li>
+<li><a href="..">...</a></li>
+<li><a href="..">...</a></li>
+<li><a href="..">...</a></li>
+<li><a href="..">...</a></li>
+<li><a href="..">...</a></li>
+<li><a href="..">...</a></li>
+<li><a href="..">...</a></li>
+<li><a href="..">...</a></li>
+<li><a href="..">...</a></li>
+<li><a href="..">...</a></li>
+<li><a href="..">...</a></li>
+<li><a href="..">...</a></li>
