--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@ github
 
 <li><a href="t3a05-input-output-by-tristen.html">please-mark-t3a05-input-output-by-tristen.html</a></li>
 <li><a href="t1a06-css-fred.html">t1a06-css-fred.html</a></li>
-<li><a href="..">...</a></li>
+<li><a href="t1a13-extend-class-by-tristen.html">please-mark-t1a13-extend-class-by-tristen.html</a></li>
 <li><a href="..">...</a></li>
 <li><a href="..">...</a></li>
 <li><a href="..">...</a></li>
