--- a/public/index.html
+++ b/public/index.html
@@ -2,29 +2,42 @@
 
 
 github
-
+game dev
 <li><a href="https://github.com/trixtxnz/game-dev">https://github.com/trixtxnz/game-dev</a></li>
 
-<li><a href="https://c0db55fb-0566-4389-ac08-4d5e42835089-00-681hl0pt5lb7.picard.replit.dev/">please-mark-t1a01-proper-webpage-fred.html</a></li>
+<li><a href="https://c0db55fb-0566-4389-ac08-4d5e42835089-00-681hl0pt5lb7.picard.replit.dev/">please-mark-t1a01-proper-webpage-tristen.html</a></li>
 <li><a href="t1a02-video-flac-tristen.html">please-mark-t1a02-video-flac-tristen.html</a></li>
 <li><a href="t1a03-list-table-and-events-tristen.html">please-mark-t1a03-list-table-and-events-tristen.html</a></li>
-
+<li><a href="..">t1a04-vibe-code-clean-tristen.html</a></li>
 <li><a href="t3a05-input-output-by-tristen.html">please-mark-t3a05-input-output-by-tristen.html</a></li>
-<li><a href="t1a06-css-fred.html">t1a06-css-fred.html</a></li>
+<li><a href="t1a06-css-fred.html">t1a06-css-tristen.html</a></li>
+<li><a href="..">t1a07-easyEDA-tristen.html</a></li>
+<li><a href="..">t1a08-in-out-tristen.html</a></li>
+<li><a href="..">t1a09-variables-tristen.html</a></li>
+<li><a href="..">t1a10-for-loops-tristen.html</a></li>
+<li><a href="..">t1a11-arrays-tristen.html</a></li>
+<li><a href="..">t1a12-events-tristen.html</a></li>
 <li><a href="t1a13-extend-class-by-tristen.html">please-mark-t1a13-extend-class-by-tristen.html</a></li>
-<li><a href="..">...</a></li>
-<li><a href="..">...</a></li>
-<li><a href="..">...</a></li>
-<li><a href="..">...</a></li>
-<li><a href="..">...</a></li>
+<li><a href="..">t1a14-ai-edgeimpulse-tristen.html</a></li>
+<li><a href="..">t1a15-liteRTjs-tristen.html</a></li>
+<li><a href="..">t1a16-move-div-tristen.html</a></li>
+<li><a href="..">t2a17-prince-tristen.html(move a object in a crown patern)</a></li>
 <li><a href="..">...</a></li>
 <li><a href="..">...</a></li>
 <li><a href="..">...</a></li>
 
+replit
+
+<li><a href="https://a6623479-d685-47fb-b453-1a5f3ce37577-00-1owz6zxh9qptl.spock.replit.dev:3002/">replit.html</a></li>
+
+random stuff
 
 <li><a href="new-test.html">new-test.html</a></li>
 <li><a href="second-part-test.html">second-part-test.html</a></li>
-<li><a href="https://63d93564-d40c-4d4a-8686-1bbb4d7c309d-00-2869f8oeskshe.riker.replit.dev:3001/">replit.html</a></li>
+
+
+
+
 
 
 <li><a href="..">...</a></li>
