Fix typo in header alignment for HTML file

--- a/public/t1a02-video-flac-tristen.html
+++ b/public/t1a02-video-flac-tristen.html
@@ -8,7 +8,7 @@ function
 </script>
 
 
-<h2 align=cennter>t1a02-video-flac-fred.html</h2>h2>
+<h2 align=cennter>t1a02-video-flac-fred.html</h2>
 Input: <input id="myNumber" type=number value="10" ><br>
 
 Event:<input type=button value="myElement squares" onclick="{
