Fix link text for t2a17-prince-tristen.html

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@ game dev
 <li><a href="..">t1a14-ai-edgeimpulse-tristen.html</a></li>
 <li><a href="..">t1a15-liteRTjs-tristen.html</a></li>
 <li><a href="..">t1a16-move-div-tristen.html</a></li>
-<li><a href="t2a17-prince-tristen.html">t2a17-prince-tristen.html(move a object in a crown patern)</a></li>
+<li><a href="t2a17-prince-tristen.html">t2a17-prince-tristen.html</a></li>
 <li><a href="..">t2a18-loop-1page-tristen-not-done.html</a></li>
 <li><a href="..">...</a></li>
 <li><a href="..">...</a></li>
