Fix link for t1a11-arrays-tristen.html

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@ game dev
 <li><a href="..">t1a08-in-out-tristen.html</a></li>
 <li><a href="..">t1a09-variables-tristen.html</a></li>
 <li><a href="..">t1a10-for-loops-tristen.html</a></li>
-<li><a href="..">t1a11-arrays-tristen.html</a></li>
+<li><a href="t1a11-arrays-tristen.html">t1a11-arrays-tristen.html</a></li>
 <li><a href="..">t1a12-events-tristen.html</a></li>
 <li><a href="t1a13-extend-class-by-tristen.html">please-mark-t1a13-extend-class-by-tristen.html</a></li>
 <li><a href="..">t1a14-ai-edgeimpulse-tristen.html</a></li>
