--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 
 
 github
-game dev
+game dev<br>
 <li><a href="https://github.com/trixtxnz/game-dev">https://github.com/trixtxnz/game-dev</a></li>
 
 <li><a href="https://c0db55fb-0566-4389-ac08-4d5e42835089-00-681hl0pt5lb7.picard.replit.dev/">please-mark-t1a01-proper-webpage-tristen.html</a></li><br>
