Fix HTML formatting for links in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 github
 game dev<br>
-<li><a href="https://github.com/trixtxnz/game-dev">https://github.com/trixtxnz/game-dev</a></li>
+<li><a href="https://github.com/trixtxnz/game-dev">https://github.com/trixtxnz/game-dev</a></li><br>
 
 <li><a href="https://c0db55fb-0566-4389-ac08-4d5e42835089-00-681hl0pt5lb7.picard.replit.dev/">please-mark-t1a01-proper-webpage-tristen.html</a></li><br>
 <li><a href="t1a02-video-flac-tristen.html">please-mark-t1a02-video-flac-tristen.html</a></li><br>
