Fix replit link by removing port number

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@ game dev<br>
 
 replit
 
-<li><a href="https://a6623479-d685-47fb-b453-1a5f3ce37577-00-1owz6zxh9qptl.spock.replit.dev:3002/">replit.html</a></li>
+<li><a href="https://a6623479-d685-47fb-b453-1a5f3ce37577-00-1owz6zxh9qptl.spock.replit.dev/">replit.html</a></li>
 
 random stuff
 
