Fix link for t1a16-move-div-tristen.html

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@ game dev<br>
 <li><a href="t1a13-extend-class-by-tristen.html">please-mark-t1a13-extend-class-by-tristen.html</a></li><br>
 <li><a href="..">t1a14-ai-edgeimpulse-tristen.html</a></li><br>
 <li><a href="..">t1a15-liteRTjs-tristen.html</a></li><br>
-<li><a href="..">t1a16-move-div-tristen.html</a></li><br>
+<li><a href="t1a16-move-div-tristen.html">t1a16-move-div-tristen.html</a></li><br>
 <li><a href="t2a17-prince-tristen.html">t2a17-prince-tristen.html</a></li><br>
 <li><a href="..">t2a18-loop-1page-tristen-not-done.html</a></li><br>
 <li><a href="..">...</a></li><br>
