Update links to include 'please mark' text

--- a/public/index.html
+++ b/public/index.html
@@ -15,12 +15,12 @@ game dev<br>
 <li><a href="..">t1a08-in-out-tristen.html</a></li><br>
 <li><a href="..">t1a09-variables-tristen.html</a></li><br>
 <li><a href="..">t1a10-for-loops-tristen.html</a></li><br>
-<li><a href="t1a11-arrays-tristen.html">t1a11-arrays-tristen.html</a></li><br>
+<li><a href="t1a11-arrays-tristen.html">please mark t1a11-arrays-tristen.html</a></li><br>
 <li><a href="..">t1a12-events-tristen.html</a></li><br>
 <li><a href="t1a13-extend-class-by-tristen.html">please-mark-t1a13-extend-class-by-tristen.html</a></li><br>
 <li><a href="..">t1a14-ai-edgeimpulse-tristen.html</a></li><br>
 <li><a href="..">t1a15-liteRTjs-tristen.html</a></li><br>
-<li><a href="t1a16-move-div-tristen.html">t1a16-move-div-tristen.html</a></li><br>
+<li><a href="t1a16-move-div-tristen.html">please mark t1a16-move-div-tristen.html</a></li><br>
 <li><a href="t2a17-prince-tristen.html">t2a17-prince-tristen.html</a></li><br>
 <li><a href="..">t2a18-loop-1page-tristen-not-done.html</a></li><br>
 <li><a href="..">...</a></li><br>
