--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@ game dev<br>
 <li><a href="t2a17-prince-tristen.html">t2a17-prince-tristen.html</a></li><br>
 <li><a href="..">t2a18-loop-1page-tristen-not-done.html</a></li><br>
 <li><a href="..">...</a></li><br>
-<li><a href="..">t2a26-backend-research-fred.html</a></li><br>
+<li><a href="https://a6623479-d685-47fb-b453-1a5f3ce37577-00-1owz6zxh9qptl.spock.replit.dev/">t2a26-backend-research-fred.html</a></li><br>
 
 replit
 
