--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,16 @@ game dev<br>
 <li><a href="t1a16-move-div-tristen.html">please mark t1a16-move-div-tristen.html</a></li><br>
 <li><a href="t2a17-prince-tristen.html">t2a17-prince-tristen.html</a></li><br>
 <li><a href="..">t2a18-loop-1page-tristen-not-done.html</a></li><br>
-<li><a href="..">...</a></li><br>
+<li><a href="..">t2a19</a></li><br>
+<li><a href="..">t2a20</a></li><br>
+<li><a href="..">t2a21</a></li><br>
+<li><a href="..">t2a22</a></li><br>
+<li><a href="..">t2a23</a></li><br>
+<li><a href="..">t2a24</a></li><br>
+<li><a href="..">t2a25</a></li><br>
 <li><a href="https://a6623479-d685-47fb-b453-1a5f3ce37577-00-1owz6zxh9qptl.spock.replit.dev/">t2a26-backend-research-fred.html</a></li><br>
 <li><a href="render.com">t2a27-render-node</a></li><br>
-<li><a href="..">...</a></li><br>
+<li><a href="t2a28spy-tristen.html">t2a28spy-tristen.html</a></li><br>
 <li><a href="..">...</a></li><br>
 <li><a href="..">...</a></li><br>
 <li><a href="..">...</a></li><br>
