--- a/public/t2a28spy-tristen.html
+++ b/public/t2a28spy-tristen.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>fred</title>
+<style>
+  body {
+    font-family:sans-serif;
+    background-color: #FF6961;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    margin: 0;
+    padding: 20px;
