--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@ random stuff
 <li><a href="second-part-test.html">second-part-test.html</a></li>
 
 
-
+<li><a href="final-project.html">tristens final project</a></li><br>
 
 
 
